more code/moving

--- a/Code/Demixing/Minicon Plots.ipynb
+++ b/Code/Demixing/Minicon Plots.ipynb
@@ -7804,7 +7804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -7823,6 +7823,93 @@
     "        lin_corrs[i-1] = lin_corr[0, 1]\n",
     "        full_corrs[i-1] = full_corr[0, 1]\n",
     "        sum_corrs[i-1] = sum_corr[0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "valid_mses = np.zeros(400)\n",
+    "for i in range(400):\n",
+    "    file_name = 'output_nn_tests_2/nn_tests_2_' + str(i) + '.pkl'\n",
+    "    #file_name = 'output_nn_runs_2/nn_runs_2_' + str(i) + '.pkl'\n",
+    "    if os.path.isfile(file_name):\n",
+    "        pkl_file = open(file_name, 'rb')\n",
+    "        nn, nnx, valid_mse, stats, c = pickle.load(pkl_file)\n",
+    "        valid_mses[i] = valid_mse[99]\n",
+    "valid_mses = valid_mses[1:400]\n",
+    "lin_corrs = lin_corrs[0:399]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nn_lin_corrs = lin_corrs[~np.isnan(lin_corrs)]\n",
+    "nn_valid_mses = valid_mses[~np.isnan(lin_corrs)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        , -0.05382269],\n",
+       "       [-0.05382269,  1.        ]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(nn_lin_corrs, nn_valid_mses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x10b8c7a90>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXMAAAEACAYAAABBDJb9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJztnX14XNV95z9HFhMLbLBlObbBYIgIocasGaBZt86ulBZZ\ntJu4xW7SLgtRSYrLNg8QMwbHdV68IJaExoQmmw1LkzpaSJek6yUV20Zjk62cpU/SXYIxxFkawlvD\nYhuEoZhFQRj99o9zR3PnRdLMaEZz58738zzz+M6dO+Nzde793nN+5/fizAwhhBCNTUu9GyCEEGLm\nSMyFECIGSMyFECIGSMyFECIGSMyFECIGSMyFECIGtJZykHPuWeA14G3gLTN7r3OuHfgWsAJ4Fviw\nmb1ao3YKIYSYglJH5gZ0m1nSzN4b7PsksNfMzgG+F7wXQghRB8oxs7i89+uBgWB7APjtqrRICCFE\n2ZQzMn/QOfewc+7qYN8SMzsSbB8BllS9dUIIIUqiJJs5sNbMDjnnFgN7nXNPhD80M3POKS+AEELU\niZLE3MwOBf++5Jy7H3gvcMQ5t9TMDjvnlgEv5n9PAi+EEJVhZvmm7SmZ1szinDvROTc/2D4JWAc8\nDgwCfcFhfcB3JmlQbF+f/exn694GnZvOT+cXv1cllDIyXwLc75zLHP9NM9vjnHsY+LZz7mMErokV\ntUAIIcSMmVbMzewZ4IIi+48Cl9SiUUIIIcpDEaAzoLu7u95NqBlxPjfQ+TU6cT+/SnCV2mdK+nHn\nrJa/L4QQccQ5h1V7AVQIIUT0kZgLIUQMkJiLWJFOp1m3biPr1m0knU7XuzlCzBqymYvYkE6nueyy\nPkZHPw9AW9tW7r9/gN7e3jq3TIjyqMRmLjEXsWHduo3s3buebCzbAD09g+zZs7uezRKibLQAKoQQ\nTUqpibaEiDyp1CYeeqiP0VH/vq1tK6nUwNRfEiImyMwiYkU6nWbnzrsBL+6yl4tGRDZzIUpEoi+i\njMRciBKQ14uIOhJzIUpAXi8i6sibRQghmhR5s4imQ14vIo7IzCKaEi2Aiigjm7kQQsQA2cyFEKJJ\nkZgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgL\nIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIUQMkJgLIRqKdDrNunUb\nWbduI+l0ut7NiQwliblzbo5zbr9z7oHg/Q7n3PPBvv3OuUtr20whpkc3efxJp9Ncdlkfe/euZ+/e\n9Vx2WZ/6OqC1xOOuB34CzA/eG3CHmd1Rk1YJUSaZm3x09PMAPPRQH/ffP0Bvb2+dWyaqyc6ddwd9\n3AfA6Kjfp34uYWTunFsO/CbwNSBTLdqFtoWoO7k3uRf1nTvvrnezhJg1SjGzfBG4ERgP7TPgWufc\nAefc151zC2rSOiGECJFKbaKtbSswAAzQ1raVVGpTvZsVCaY0szjnPgC8aGb7nXPdoY++CtwcbN8C\n7AQ+Vuw3duzYMbHd3d1Nd3d3scOEmBGp1CYeeqiP0VH/3t/kA/VtlKg6vb293H//wMSsK5WKhylt\neHiY4eHhGf2GM7PJP3Tu3wNXAseBucDJwG4z+0jomDOBB8zs/CLft6l+X4hqkk6nQzf5pljc5KK2\nRPWacc5hZmWZsqcU87wf7wK2mNkHnXPLzOxQsH8z8MtmdnmR70jMhRA1pVJBzl80b2vbGplF80rE\nvBw/c4e3lQPc7px7zDl3AOgCNpfznwohxGSU42I6E1fFuC2al+qaiJkNA8PB9pU1ao8Qs0ZUp9jN\nTLkupnJVzKIIUNGUKPgkmlRrtFzK6D5unjElj8yFiBMa0cWDYl5MXV3XljS6j5tnjMRcCFF3Miav\nkZEjJBI3Mjbm90/nYlpMkMt5UPf29ja0gIeRmIumRH7p0SHfTp5IfIJkchcdHYtKGi3nC3IjL2LO\nBIm5aEriNsVuZPJH0mNj0NExyJ49uyv6vWZ9UEvMRayZymMlTlNskaVZH9QlBw1V9OMKGhJ1JMpB\nISKL+qmQmkaAVoLEXNSTdes2snfvejLTdxigp6fy6buoHbXy+W/UWIJKxFxmFiFE3amFyavZctxL\nzEVsadaFMOFptlgCRYCK2JJZCOvpGaSnZzDWo7JmQaUBp8DMavbyPy9E5QwNDVlPzwbr6dlgQ0ND\nVf9epb8vZp+hoSFra1ti8A2Db1hb25Jp+7ac46NEoJ3l6W25XyjrxyXmYgZUejOW+r1GvtmbkZ6e\nDUFfWfD6hvX0bJjyO+GHdX9/f8M8uCXmIlYU3rwpmz//dGtv77Rkcu2kN2SpN30l4iBqQykzpJn0\nV6M9uCsRcy2AigYhDezi2LE7ADh6dAvr1/8eg4P3yQ7e4JTqdTKTBe2mWAwtV/3LeaGRuZgBuaOp\nNQWjMlhTdGQmM0tjUc6Iu9I1jkabhaGRuYgT4bDsH/3oJY4eLf97MHk4d7OGfTcylfqjN4ObqiJA\nRUOQTqdZv/5Kxsb+JNizhUTiuMwsMWC2wvkbKRpU4fw1oJEugLiTTqfZtu02nnvueVasWMptt31a\n/RETdJ/lIjGvMkoAFE8kHCLqVCLmigCdgrhV7xaq/RknyokGbYbIUS2AiqaiKVzUmoBS3BnDpegO\nHvzpxHpLXBNuaWQ+BXGr3t1MNMNIrJnxD+UrgEFgkNHRK3JmzeEZ2P79bwdCHu8ZtkbmUyDXtcZk\nqlFbM7ioNQMjI0eA7wNfCPZsYWTkPROf54r9S7PfwDogMZ8GlRZrPIqZUrZtu23iofzhD1/KAw/c\nAsANN1yr/o0oUy9Ut+KFvC+0b9fEVq7YnwVcN/FZXB/gEnPRFBw48GPGx3cG764DrgbO59Zbt3Lx\nxRdL0CPGdDbxjo5Fed94nOeee5516zaSSm3itddeA87Gj8y9aXT+/M+wZs3F8Z1hlxsyWs4LhfOb\nmdKsVpPM3zKZXGvJZFfRv2l+mH5Ly0KDVF4qgA0NEdbdrBQLv29v75zo69w+ThmcPNHficQCc27B\nxHtYYpBqqH5G4fzRo9lKV9WS7N/yCsL20vy/af5ax8jISvbvP79OrRbV4ujRxVx2WR/bt1/L7t3f\nxftvbAYSwJfImFzGxu4CriFsgmlpSZFKfXPW2zyrlKv+5bzQyLzhEvxEmezfsry/aX9/fzA6z4zU\nTg5Gc0quFVXyZ1d+dD1kkDLn5hl0hD5rz7seCpOyJZNdE7/bCLNkNDIXIpd0Os2tt36Z8fGPAnfR\n0vIkV155GS+88AzwTHztpxGknMjbzOzq8ss/ztGji/Huwb3ADsxWkTvyfhw/QvckEk8ANzI25t+3\ntW3lttsG4j9LLlf9y3mhkbnSrFYRP8JeZLAqNLpeYy0ti6y/v7/odzQzigbVqhrl+79YOuRzDRba\nsmXnBOsphWsqjXQtoJF59JCvenXIjrAzHikfx7mvYfanjI8jr5SIU2nkbf7909W1mR07/oTjx7eE\njroOOBX4NQ4d2suhQ38MNGEupXLVv5wXGpmLKlE4qipmF11bYA/NH9klEgsm9YIRtaNao+KhoSFL\nJBYEI/HlBgtCnkpT/x+NNEtGNUBFXJlezFM5i5zhGzXszphILG6ImzluVEtIp74Oirsz5j/c47oA\nKjEXDYEfkWWF2NvMs77F3pZa3IMhQyPZTONINYS0WJHvrE95rr95I3stVSLmJdnMnXNzgIeB583s\ng865duBbwArgWeDDZvZqtU1AQmTo7e3lvPPOYf/+u/D20W8De2lvv4WLLlrNyMgq9u/P/c6BAz8m\nnU43j8004uSnxqgkr3x+bp1E4uvMmTOX0dFP4eXoJuBz+HwsZwA9QG9zZMcsRfGBG4BvAoPB+9uB\nm4LtrcDnJvneLDzDRDMwNDRk7e2dk46sh4aG8nzJC6P+GslmGndm0heZEX5n50pzrj0wtWw0WGRw\nQWh0njJYGOyLfwRoKUK+HHgQeD/wQLDvCWBJsL0UeGKS787OmYtYk73xUxYOFskXgGRybXBjbzAf\nYJIr9t5u3jWxUCohrx8zNXn19fXliXbYvNJh0B880LMml8ncV6NIrcT8L4Ek0BUS81dCn7vwe5OY\niyrjRXqVQafBymC7veDmzI/0zIi9RuTRYyZi3t/fb96LZfKFT3+tNO76SCViPmVxCufcB4AXzWx/\nINrFzDQGWBmWHSFKJp1O8+ijB4EtwKeBF4F/BN7Jvn2P5Bx3881fYHz8NOBTOHct27f79Lbbtt3C\n6OhZ+Ax6SyeKE6iARf2YqvDLdP1yxx278AaDqXiz2k2OPNMtgP4qsN4595vAXOBk59w9wBHn3FIz\nO+ycW4a/w4qyY8eOie3u7m66u7tn3GgRb8ILYyMjRzC7k9y81XeRX3Bg27ZbGBtrxYs+mG1h9+7v\ncvHFF3PgwE+ALwZH9gFXMDLycrxDuyPOZMF0k4XcAxPHvvHGK8ARMn2dn6/cuesxOw58fGJfInEj\nXV3Xs27dxuD/i1Yh7+HhYYaHh2f2I6UO4ck1s9wObA22P4kWQEWVKC197RqD9hxTSbHF0YyPcf7+\nlpZFgemmcafhcaVYfyWTa3OuCedOCa6JocDEssZguc2ff3rgopoKjj3J5sxZZPPnn2F9fX0NZWpj\nFsL5M+aUzwHfds59jMA1cWaPFCE8+WHf4+PgkyhlUthuAcbo7FwxMbJKp9O89dZbBb+1YkXxqfjq\n1auKFDcQ1aQSt8PJeO65wznXhB8n3oVPgdyLN9XcxQknvMT4+C3BcWmgjbff/gLHjsE992wOkq35\n34ijq2LJYm5m+4B9wfZR4JJaNUqIMJ2dK3j66c2YnQR0kEgc5itf8ZXWc3OcZ/N1JBI3snHj9eze\n/V1aWjYHD4VsBj1AtUBrxEyyExar0bpixbkcPZp/5E/xIg6whUTiOCtWrA4ddzfhsnK+/++awVk1\nAOUO5ct5ITOLKJP8SM9EYvGER0qx6MHcafmQwRprb++0/v7+nEo03rTSlfPdRgntbjRm6naY3y+F\n+XUWW2vrSYFX03Jzbr719/fnHVeYuycbJSwzixCzxFtkR1HefFJaYe1e4DAXXTTIvn2P5Jlrzqej\nYzDnN1SsO5oU65fcylHnsH//1WTNLgPs2zfI9u3bJ44bGZnDwYO5Oc23b9/Mvn2DQDyzl07pmijE\nbLNz592Mjd0J/AD4AWNjd07cxMXo6rqQlpYU8CvAlhwXt6mQW2LtmMrtsFJ6e3vZs2c3e/bspqNj\nSdFjMnb6kZGXATjvvHNIJnfR0zPI/fcPsH379ol2ZFxTY0W5Q/lyXsjMIsqkuDdD18Tn4UjOzs6V\nOUFCLS0LJwKJcqNGcwtYKIio9tTShFWs/3LNapko0FRO32aLm6wp+CxqoKyJtUG21dmjMDtihyUS\nC4raTnNzWRfaZrMRobmCruyJjc3Q0JAlk2utvb1zYh2kWJ9mIkMz9+10uXuiRCViLpv5NMS+bmCV\nqJYrWmF2xHsZGzs88dthO7hncg+FffseCdzR7gU+z/g4fOYzm1m9emVFbRP1I2xCOXjwQGCKg9HR\nrcWOJhtYdhY//OH/Ztu2lxkf/yKF186ptW76rCExn4ZKy101E9V+4Hmb6HqyN95ULoNPTHyeSNzI\nyMg5rFu3MWSj/Tsg12/94MGtwB+FfuM6urpuqqitovbkX1/eBXUp4dS2WZfGx/HXwxfwhZ6/zrFj\nrTz66GNFfvkfGBmZE580yeUO5ct5EQMzi6bk01Ptv9FkNu3iU+WNBu3W2XlBUE4s145arGhFJoIU\n1gavVdbe3ikTWkQpbkJZa3BO0I/zbNmyd1l/f7+1tr4z+HzI8rMmZotYZApXbIzsmgmymVcfLZZN\nTy0eeJOtUxRLc5up6VksDLyz83zLTY+6ZOJ70JVzw6tvo0mx6kJwSt5i58nW0jLfOjsvyLGXh6+H\nefOWWU/PhiD1w+RrLVFAYl4jtAA6NbP5wMsW9F1jsGZicbTYDZ8dxWeKFKwKhHwo+H5HwU2deTCo\nr6ND/vXlC1KkAsHeYJkFblgTqvNarOB3l5k1xmxbYi7qxmw88DJeDHDSxM3b2nrKJJ4uCwtuWD8l\nzy1w4beHJo5ppCjBZiJ8ffnZVn4fdhgst2RyrfX399v8+acH14BPupWJJM78VtRn2xJzESvCN3Bf\nX585Nz8wmSzIuZGTybVmFvYjXhUyn2TFfP7800M21bDIr7HJMjRGbcQmzJYtO6dIH64K+vBEgxMn\nHvZwos2dW1jIJOqz7UrEXN4souak02m2bbuF5547zIoVy7nttm3Teg8UejBch6+PshK4Bu/NcDdw\nNk8++TSQcUX8fbwrYm7irba2rfzlX/pQ77178/+3Z2ltvYm5c+fy+uszPVtRS9LpNIcOFSufcA7w\nPOPjLXgnvWuC/Vv4xS9+wc03f4GLL7544rqLZSqHctW/nBcamTc9WRt3dlocnvJORnEPhszCZ8py\nPRVOsWRybWhxNPO9vuD/bbdly86wnp4NBaXlYLHlLpCePDE1j+L0u9nxJpYTi/RZXzBjK7SVw3KD\nNQX1YKM6KjeTmUVEEC/KhTfYdOaLZLJrEjEfMl+FvfCzRGJxYIr5hvmCvvk3/HJraVlkl1xySSis\n+9yC38oUtYjqjR4nyhVWbyZbZYULoBnzWbFBgM+umEyubQh7uZnMLCImpNNpDh48QNhMki0LdhhY\nVuRbpzI2dg2dnXfyzDObGR8/CfgSWXPMSuBnjI/v5Hvf+wQf+chv8cADD/Haa8c4fvzxnF+66KLV\n7Nmzu+rnJXIpNdgsHF18wglzOH78VXyxki8ERwyQya4Jm8iN8rwBOA5czeOPf4Pf+Z2rgnqwuUFH\nsTC5lKv+5bzQyLzpqcTMkjWxZMuCdXaunMjH0dbmTSfFfMczIzw/gis0x/jjUkUCSGRaKYVKTRTF\nvleKi2BhGcF3mPdmyvdmmRval3FFXRDMvLLeStlZYu41EzWQmUVEkWKJkcKflXuT+89T5oN+sjUf\nw1kT+/v7Lev1Ep5yFzf7yLQyPZWaKCb7XiliXnjMGvPRn7keKz6ac0Fo30mhB3m4VujK0Pa5kX14\nS8xFQzFV2H5uZZkFE8E8hZ+Hb+LctKbFXdjWFBX5KI7OokalwTaTfa+Uh0NxMc8IdJf5GVpHaF+n\nZddW+vNG8SnLXUc5pcBlMSpIzEVDMZU4ZPOWr81JiRsW/GxoduEoOxtgFJ6OLzCYFzwAwlP3hZEc\nnUWNaou52fRmm8KUyCfnCHIiscDa25eG9q2x3Flb+PqIfuRnhkrEXAugIpJk/IDXrdvI2Fi2RNjo\nKGzbdhsdHYsAWLFieUGx36NHF3PZZX2ce+65wfcGg08+BnwL+CBwNX5h9AVWr14ZjwWwGtPVdSHf\n+16K8fG7gLW0td1bUhHsYkWaM9+bzt+7MCXyTcB9tLbexPnnv5vbbrsPgKuuuo5Dh67FxyI8ge/r\ni4FdU7YtU5UoFpSr/uW80MhcTMFU0+ypRt7hkPvW1lOs0AWx38An2soN8X+HeRe2dstkzNOovDQK\nFyIXlmWimIlvd+6CeK75rbPzguB6WGu5kcGLLVu8ZDIzywKbN29ZJPsfmVlEVCj15i12XK5w5N6A\nxULuvcdC2Oc4t8JMT88GW7bszCKif5L19fXN0l+ksalncqrs9RBeuB4qYkIrtj6SOXaNwRnBQ3yh\nZfP0RNODSWIuIsFMAzOKZUBsa1tmra3vtJaWU4IbsthNa8EN6oOD+vr6Jh4UbW2nFr3Zyx1hNiv1\nzjQ4NDSUN0ubbGF0susi8/5kgxV1PZdSqETMZTMXVacW1ZlGR/8fPggIfADR7wAfJJG4EXiLsbEB\nfGWZPwO+xPg4DAxch7eNnw/8bZFfPZXx8Wv4zGdSOXk7RCH5du+Wls2MjKyctSo9vb29/MVffCUI\nMgJ4Ad/fG4MjTgM2h75xHT5YaGDi/dy5rZx22nJefPF1jh2reZNnn3LVv5wXGpk3JTMdxZWSzra1\n9Z05roo+/P+UIqOzrmB7o01epGKV/MxLIPN39jbq+pgospkxlxcxm2Vy8yw0uCQYgWfy2Gds5xvN\nuYWhnOgys0jMG5xaJhuqRv6LcPt8bupC98Mw3g2xveA475qW2V5pkJvnOj/RVhRv7ChRb3NL9v/v\nKtLXCy3rmnhyqI8XBMevMu+aml1/yeRriRoSc1ESs5FsqJoPCx/NmTsK6+/vLyL451phmPe5wU29\nYGKE1tp6ijmXufELE21FzX4aJeol5rneTRttsmRrhdG++QulucVIotrXEvMa0wipM0uh3qOrSujv\n77f29k5rb++cEPJCU0xGtMNh3ssta6bJRv1N5foY9b9FPalH1sHCvs4UY87fl+/llPFwKpbSIdp9\nLTGvIY2SOrMUGlHM8/E28nAa1I3mbea+HqRz7dbX1xfySTfLuKhlIkTN4tWvs8VsD2qK57Zfbj6H\neWew3V4we8vWBi02go92X0vMa0gcBDBDowpYRkR8Bfa5ll8+ztvEc8XaH5syvzi2sOg5x2XGFVcm\nL1QStotnRutrLBsUtiHo93CGzXZra1s8Uagkqv1eiZjLNbEJ6e3t5f77ByZyRKdShTmko0ZhGbkb\ngDvIzV29C7iKiy4aDJ3PGN5dcSXwUTKh/aOjV3D55R9nxYqlQCsdHYtIpTZF/u/QjOS7RcJWvMvh\nYXx/ZvKaDwI/wOfB9y6qnj8C7gTeBVzFm29+g66uC7n11i9Pm0u9oShX/ct5EaOReaOOZqNGpaPg\nybPn5Y7W8vslaxPPT7rVYd51rUN92gBkUxpnMiJm+ryrqC28MCo4nMc8Ffm1EjQyrx2NOJqNGqVW\nlimNteQGifwRc+a0ceqpp+cclU3E1YofwYVH8p/O2RerqjMxY9++R4Bx4Gf4EfkAfgTeEWxfh0/E\n9Sv4YKJryK1E9HXgFuDcWW33bCIxL4NYVvSeRWYSGVo41R4Afg34BD7Sby5vv72Tp56C9euvZHDw\nnuC44zj3CcyK3cSJGZ6RmF0S5GbB7MJH9mZKw/0rfLTv9cB/Co45n2zJwU8H/17HBz94Gd/+9tai\nmRwbFYm5aAjCM6Onn36aI0dOIJF4lIULz+Spp+biR2L+ITE2Bh/60CbefPM1xsbuxI/UvoK/yTNc\nB/QQrjMahxs6rqRSm3jwwb/GLGMLz6Zu8GzBj77vA/4UuCt4/zbQiX/oZ2dlL7wwGLuZ9rRi7pyb\nC+wD3oF/NP6VmW1zzu0A/gB4KTh0m5kN1aqhovGZKq91KWRutrCp5tVXU8C7C449duxU4A184d6l\n+JF8H/4m/yktLW+yevUI8B5gV7AA2vg3dFzp7e3lggsuZv/+h/HC7PBCHjab3YXPUb8eb3K5Jtj3\nEsWI20x7WjE3s184595vZm8451qBh5xz7wMMuMPM7qh5K0UsqMa6Q9ZUsxS4m/HxxfhR2pbQUWFv\nh7uDfX3AM/ibfC2rVz/MI48M51R+F9Gmo2MJkMSvl3xzkqNeILf/Ad4ka2qJ7wysJDOLmb0RbCaA\nOcArwXtXi0aJ+DLT0dDIyBHgU8Ax/HR6PXANbW2O0dEUsAx/I/cG/74AvAp8H78g9jiwi8cec5x9\n9nn8/OcvMTb2J0BM3NNiTFfXhTz44F7MHsfLUHgBfAt+JubwI/LDwb7XcW4uZlcDd9HS8iTbt2+O\nZx+X4vICtACP4u+g24N9nwWeBQ7gjVMLinyv5i48onkYGhoKKguFE2rl597IBpIkEostmVwbStSV\nW6kmGzEaTfc0kSXXNXhVqD8vCPr/FPMVplLW1naqtba+0+bNWxYEjeW6ICaTXfU+nWmhAtfElhIF\nf9zMLgCWA//SOdcNfBU4C7gAOATsrNoTRjQF6XSades2sm7dRtLp9LTH79x5N8eP/xJwTmjv3WTd\nC/vwdtRddHbu5LzzVtLRsYSzzz4jdOznQ8f+KTD9/yvqT64nVKb/e4H9+P7/dWA7cD5vvvkmx4/f\nzuuvX85TT/0j3m6e7ecDB35c0vXWaJTlzWJm/+Sc+2vgYjMbzux3zn0NeKDYd3bs2DGx3d3dTXd3\ndyXtFDFjZj7npwEp/E36Kt7UEuadwU2cAsC5T9Daen3wIMjnBTIFDOJqS40fm4ArQu8zRUgGaGnZ\nzPj4R/FrKlvxUcIEx/cB9zI+/vuRiycYHh5meHh4Rr/h/Ih+igOc6wCOm9mrzrk2/CPu3wEHzexw\ncMxm4JfN7PK879p0v98MhBfZFDLuWbduI3v3rifrjTBAT88ge/bsnvQ76XSaD3xgI8ePzyG36tBx\n4D8G77cCi/H20uxvO7eZuXNbGR19Cx/aTXDML0gmL6KjYxFdXRcGwSnqp6iR//BPJD7BeeetLui3\nkZEj7N9/Nd4XPff68kFDXwEOk0x6DyaIZl875zCz8tYkp7PD4L3uH8HbzB8Dbgz2/+fg/QHgO8CS\nIt+tqV2pEVAagOJUmrjMZ0vM/V5b27LAjp6pKFOsSMUamzdvmfkEXcuD19yJ+p/qp+jjKx35NZC2\ntmU2b94ySya7cvrJh/0vDPq3eLbERGKxJRILIt3XKGti9IhTtsVqUql4Tp5Bz1eOaWvrMJ/HPL9y\ne8p8LpZsBr3W1kWWTK61np4NQaUi9VOUGRoaskRicahfOwxSlkgstqGhoaCkXCYzZqbakD/WuQUN\n1deViLkiQEVdqNTnvDCsfwtwL9DL+Di0tn4GvyDm/dC9TfwU/DT7beCLZKbex4/D/v13AetpadmM\nd1sUUWXnzrsDN9K+0N5djI118qEPbeL111/B7Mt5n3+KlpZRbr55C9u3byedTnP55R/Hr7csxS+i\nxgOJeY2ZadRjnKnE5zz8EPjRjw5w9Ggf4RvyhBNOyBwZvLYA9wDnAS8X+cVTgT7Gx6GlJcX4+PmA\n+qlx+DGwk2PHwEeGhh/I59Pe/h1uuOEa9u17hN27uzl48ECQ4gEyi6JtbffGo6/LHcqX80JmFjNT\n8YNakW+qaWlZaH19faF9uVNtv31K3jQ9m041mexSP0WYQjNLxnwWNrktsmzK2/zrobDPw4VMogSy\nmYtmw9tJ4dpOAAALkUlEQVRJF1mmKntb25KJCjLz559RZLG0w5LJLksmuyK/CNZslDLo6e/vt/nz\nz7A5cxabcycWWT9ZkfPAdq4wMEw1QCXmIoL4BdFwLdDUxA063eKzZkyzy1R/71IWxPNH5l6oMzOv\nlHkvlmKeTKuKLphH+QEuMRdNh/dMyK0glEyuNTO5G0aJ6fqiFK+vYm6pvqBzuL5rsQpUWQ+mTIqH\nqD/AKxFzLYCKBqdYBaFdgKpDRYmZFCbJ8NxzzxfZ+wo+SCzjpbSU3OjQLXR2nsa73uULWqRS98T2\nGpCYi4ahWCRtJoovTHhf3HJWx5VSvL5WrFjK0aPhVMdbaGubAzwbclXtxYv6p4DlOPcLrrrqd9m+\nfXutT6H+lDuUL+eFzCyiSkw2TZcppTEo1SY+1RqGt5lnijqvsUyGTOfmB9uZ/fOCV3ZRvNGuCWQz\nF3FlKptqMRHQ4mb0qEafDA0NWXt7ZyDUQ5ZNgRx2OT3ZfDj/huDz6HqtTEYlYi4zi2h48k0pM8vI\nKGpFNUxevb29XHTR6iBJG3iTytmEa8B6bsBn6O4j14ZeSGwS4ZWr/uW80MhcVIlyzCnKhxNvstdC\nxnNlsnw9fn9Ly6JJr5WomumoVXEKIepNxjMlmdxFe/stnHvu2Tmfhwtd+NJyU1NuYQwRHTLXQnt7\nplDzJrJ1PweC7bUTx69evYre3t6ifZ7rZeNncw1bE7Zc9S/nhUbmooqUugg6XYrTqI7GRHnk9mPK\nfHh/Jg1yR87i52R9HtVZHBWMzKctTjETVJxCVJPJCloABfunKj5QSWEMEU3C9u5MkYqRkZeB43R0\nLJno+8n6PJXalLO+0ta2NRLrK5UUp9ACqIglHR2LiopzOp3mRz86QGGpOdGIZBZVw6J+223bShbj\nWAWWlTuUL+eFzCyiiszU1zx7XGYaLjNLHCjVh72RTGvIz1zEncl8lUvxYc61jw4ZrIlsClSRiy8Z\n12Xt7Z2WTK4tO69L5jcaJfagEjGXmUU0FJkp8M6dd09MjTNT7fKmx73AYS66aLBxp9VNQjqdZv36\nK4MqQ3D06BbWr/89BgfvK6vvYp/aoVz1L+eFRuaiysxkutxoU23hmazuazgCOG79ikbmIu7MJPte\nrBa7xATqV4/EXDQVsZ9qx5BUahP79l3J2FhmzxYSieOkUjsmjlG/oghQ0VikUptoa8tG+/lUqZvq\n3SxRQ3p7exkcvGci+jeZfE/Z9vJmQEFDouGITWIkISahkqAhibmIJRL85iNOfS4xF4LCFLhRCdEW\ntaNYn2/ffi379j0CNJ64S8yFQLlXmpHCPt9CS8ufMz7+RaDxHujKzSKEEAD8XSDk5buwNioScxE7\nSikOLOJFfp+3tDzJ+Hh92zTbyMwiYkmcFsNEaeSnw7311i837LqJbOZCICEXnka+DiTmoumRJ4uI\nAxJz0fTIk0XEgUrEXOH8QggRA+TNImKFPFlEsyIzi4gdjbzwJapLo14LVbeZO+fmAvuAdwAJ4K/M\nbJtzrh34FrACeBb4sJm9WuT7EnMhRF1o5MXwmiyAOudONLM3nHOtwEPAFnxp8xEzu905txVYaGaf\nLPJdibkQoi408mJ4TRZAzeyNYDMBzAFewYt5xhA5APx2Of+pEEKI6jLtAqhzrgV4BOgEvmpmB51z\nS8zsSHDIEWBJDdsohBBl02yL4dOKuZmNAxc4504B0s659+d9bs65SW0pO3bsmNju7u6mu7u74sYK\nIUSpNFJt0OHhYYaHh2f0G2V5szjnPg2MAn8AdJvZYefcMuBvzezcIsfLZi6EEGVSdZu5c67DObcg\n2G4DeoD9wCDZVYU+4DvlN1cIIUS1mM7MsgwYCOzmLcA9ZvY959x+4NvOuY8RuCbWtplCCCGmQkFD\nQggRMZSbRQghmhSJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBC\nxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJ\nuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBC\nxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxACJuRBCxIBpxdw5d7pz7m+dcwed\ncz92zl0X7N/hnHveObc/eF1a++YKIYQoRikj87eAzWZ2HrAG+Lhz7pcAA+4ws2TwGqplQ6PI8PBw\nvZtQM+J8bqDza3Tifn6VMK2Ym9lhM3s02H4d+D/AacHHroZtizxxvqDifG6g82t04n5+lVCWzdw5\ndyaQBH4Y7LrWOXfAOfd159yCKrdNCCFEiZQs5s65ecB/Ba4PRuhfBc4CLgAOATtr0kIhhBDT4sxs\n+oOcOwH478B3zezOIp+fCTxgZufn7Z/+x4UQQhRgZmWZsVunO8A554CvAz8JC7lzbpmZHQreXgY8\nPtPGCCGEqIxpR+bOufcB3wcew3uwAPwx8K/xJhYDngH+0MyO1K6pQgghJqMkM4sQQohoU9UIUOdc\nu3Nur3Pup865PcU8XCYLQooqzrlLnXNPOOeedM5tneSYLwWfH3DOJWe7jTNhuvNzzv2b4Lwec879\nnXPun9WjnZVSSv8Fx/2yc+64c27DbLZvppR4fXYHgX0/ds4Nz3ITK6aEa7PDOTfknHs0OLffr0Mz\nK8Y59+fOuSPOuQITdeiY0rXFzKr2Am4Hbgq2twKfK3LMUuCCYHse8A/AL1WzHVU8nznAz4AzgROA\nR/PbCvwm8DfB9j8Hfljvdlf5/H4FOCXYvjRu5xc67n/gF/k31rvdVe6/BcBBYHnwvqPe7a7iue0A\nbsucF/Ay0Frvtpdxjv8C7+r9+CSfl6Ut1c7Nsh4YCLYHgN/OP8CKByGdWuV2VIv3Aj8zs2fN7C3g\nPuC38o6ZOGcz+3tggXNuyew2s2KmPT8z+4GZ/VPw9u+B5bPcxplQSv8BXIt3u31pNhtXBUo5v8uB\n3Wb2PICZjcxyGyullHM7BJwcbJ8MvGxmx2exjTPCzP4n8MoUh5SlLdUW8yWWXQQ9AkwpaqEgpL+v\ncjuqxWnAz0Pvnycb/TrVMY0ieKWcX5iPAX9T0xZVl2nPzzl3Gl4kvhrsaqRFpFL6791Ae2DafNg5\nd+WstW5mlHJufwac55x7ATgAXD9LbZstytKWaV0T83HO7cWbSvLZHn5jZjaVn3mRIKQoUuqNne+C\n2SiCUHI7nXPvBz4KrK1dc6pOKed3J/DJ4Hp1NFaKilLO7wTgQuDXgROBHzjnfmhmT9a0ZTOnlHP7\nY+BRM+t2znUCe51zq83sWI3bNpuUrC1li7mZ9Uz6v3pj/lIzO+ycWwa8OMlxJwC7gXvN7DvltmEW\n+b/A6aH3p+OfjlMdszzY1wiUcn4Ei55/BlxqZlNNC6NGKed3EXCf13E6gN9wzr1lZoOz08QZUcr5\n/RwYMbNRYNQ5931gNRB1MS/l3H4VuBXAzJ5yzj0DvAd4eFZaWHvK0pZqm1kGgb5guw8oEOrJgpAi\nysPAu51zZzrnEsDv4s8xzCDwEQDn3BrgVWscf/tpz885dwbw34ArzOxndWjjTJj2/MzsXWZ2lpmd\nhZ8p/tsGEXIo7fr8K+B9zrk5zrkT8QtpP5nldlZCKef2BHAJQGBLfg/w9Ky2sraUpy1VXp1tBx4E\nfgrsARYE+08F/jrYfh8wjl+d3h+8Lq33yvIU5/QbeI+bnwHbgn1/iA+SyhzzH4LPDwAX1rvN1Tw/\n4Gt4L4FMX/2vere52v0XOnYXsKHeba72+QFb8B4tjwPX1bvN1To3/EzqgeC+exy4vN5tLvP8/gvw\nAjCGn0F9dCbaoqAhIYSIASobJ4QQMUBiLoQQMUBiLoQQMUBiLoQQMUBiLoQQMUBiLoQQMUBiLoQQ\nMUBiLoQQMeD/A7OMAyA5I65dAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10ae59990>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.scatter(nn_lin_corrs, nn_valid_mses)"
    ]
   },
   {
