--- a/Code/Demixing/Demixing Precision Readout.ipynb
+++ b/Code/Demixing/Demixing Precision Readout.ipynb
@@ -4846,6 +4846,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "file_name = 'readout_2_1.pkl'\n",
+    "pkl_file = open(file_name, 'rb')\n",
+    "lin_preds, lin_corr, full_preds, full_corr, sum_preds, sum_corr, kurt_preds, kurt_corr, valid_mse, valid_mse_lin, valid_mse_full, vp = pickle.load(pkl_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.43161272],\n",
+       "       [ 0.43161272,  1.        ]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kurt_corr"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
