adding weight correlations

--- a/Code/Demixing/Demixing Precision Readout.ipynb
+++ b/Code/Demixing/Demixing Precision Readout.ipynb
@@ -12754,6 +12754,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        , -0.27930949],\n",
+       "       [-0.27930949,  1.        ]])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(nn.get_params()['W'][:, 16:18].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
