--- a/Code/Demixing/Demixing Precision Readout.ipynb
+++ b/Code/Demixing/Demixing Precision Readout.ipynb
@@ -814,12 +814,70 @@
     }
    ],
    "source": [
-    "sum_corr"
+    "posts = {}\n",
+    "testsets = {}\n",
+    "for s_i in range(60):\n",
+    "    file_name = 'output_post_4/post_3_' + str(s_i) + '.pkl'\n",
+    "    if os.path.isfile(file_name):\n",
+    "        pkl_file = open(file_name, 'rb')\n",
+    "        p, r, c, s, delta_s = pickle.load(pkl_file)\n",
+    "        for i in range(len(p)):\n",
+    "            posts[c[i]].append(p)\n",
+    "            testsets[c[i]].append(r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'var_s1': array([  3.03066998,  10.59772675,  16.9948458 , ...,  25.61028366,\n",
+      "         8.3886189 ,  24.26021268]), 'mean_s1': array([-12.09122169, -14.43172437,  10.82170894, ..., -24.27855888,\n",
+      "       -27.26971158,  29.71705808]), 'mean_s2': array([ 58.0406785 ,  -1.83678521,  20.66475155, ..., -13.58762485,\n",
+      "        33.85746067,  45.46728772]), 'var_s2': array([  3.05169817,  13.31603863,  26.53719181, ...,  15.34052388,\n",
+      "         5.93613481,  11.82192002])}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-59-d32e2d914989>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mposts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0;32mprint\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m             \u001b[0mposts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtc_i\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0mtestsets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtc_i\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "posts = {}\n",
+    "testsets = {}\n",
+    "file_name = 'output_post_4/post_3_1.pkl'\n",
+    "if os.path.isfile(file_name):\n",
+    "    pkl_file = open(file_name, 'rb')\n",
+    "    p, r, c, s, delta_s = pickle.load(pkl_file)\n",
+    "    for i in range(len(p)):\n",
+    "        tc_i = tuple(c[i])\n",
+    "        if tc_i in posts:\n",
+    "            posts[tc_i].append(p[i])\n",
+    "            testsets[tc_i].append(r[i])\n",
+    "        else:\n",
+    "            posts[1] = 1\n",
+    "            print p\n",
+    "            posts[tc_i] = p[i]\n",
+    "            testsets[tc_i] = r[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -827,115 +885,40 @@
     {
      "data": {
       "text/plain": [
-       "array([[ -5.30542786e-02,   1.58300374e-02],\n",
-       "       [ -2.46917685e-03,   2.78910569e-02],\n",
-       "       [  3.31833549e-02,   3.95405797e-03],\n",
-       "       [  1.92035109e-01,  -2.20592956e-02],\n",
-       "       [ -5.41356689e-02,   1.45408297e+00],\n",
-       "       [  3.55643253e-01,   6.64316530e-03],\n",
-       "       [ -1.24587622e+00,   1.07341108e-02],\n",
-       "       [ -3.06208394e-04,  -2.07341218e-03],\n",
-       "       [  5.25715962e-03,   4.26600225e-02],\n",
-       "       [ -7.15703757e-02,  -5.70746612e-02],\n",
-       "       [  4.62333989e-03,  -1.13843572e-01],\n",
-       "       [  2.23866676e-02,  -1.24884140e-02],\n",
-       "       [ -6.12754144e-02,   2.27170949e-02],\n",
-       "       [  2.61498364e-02,   1.67238804e-02],\n",
-       "       [ -3.89719167e-02,  -1.23261308e-01],\n",
-       "       [ -4.96895581e-02,   8.08292133e-01],\n",
-       "       [  1.48532600e-02,  -2.73340635e-02],\n",
-       "       [ -1.39452264e-01,   1.07757940e-01],\n",
-       "       [  2.31934784e-02,  -4.62203297e-02],\n",
-       "       [  1.72943068e-01,  -2.09367523e-02],\n",
-       "       [ -4.65059693e-02,  -3.49948465e-02],\n",
-       "       [ -7.03173590e-02,   2.91514787e-01],\n",
-       "       [ -1.24543155e-02,  -2.10448573e-02],\n",
-       "       [ -1.56176722e-01,   3.81690608e-01],\n",
-       "       [  2.56686613e-02,  -2.57719118e-02],\n",
-       "       [ -4.99376909e-02,   1.95956057e-02],\n",
-       "       [  8.78859422e-03,  -1.11244442e-02],\n",
-       "       [  9.28978088e-02,   2.11743506e-02],\n",
-       "       [ -6.72758041e-05,  -1.77915327e-02],\n",
-       "       [  3.68732303e-01,   1.23789198e-02],\n",
-       "       [  2.97151236e-02,   1.52702682e-02],\n",
-       "       [ -6.80044900e-02,   8.67107013e-02],\n",
-       "       [ -6.81692329e-02,   1.35323094e-02],\n",
-       "       [  3.49719453e-02,  -4.64377593e-02],\n",
-       "       [ -4.16806651e-03,  -3.13193565e-02],\n",
-       "       [ -1.43672191e-02,  -9.29805499e-03],\n",
-       "       [  7.47836801e-03,   2.03072510e-02],\n",
-       "       [  3.81411061e-02,   4.97552071e-02],\n",
-       "       [  4.99154487e-02,  -1.84516284e-02],\n",
-       "       [  4.15440868e-02,   1.04510992e-01],\n",
-       "       [  3.82333054e-15,   3.77475828e-15],\n",
-       "       [ -3.60247175e-03,  -5.71300755e-03],\n",
-       "       [ -4.80570455e-03,   1.84179705e-03],\n",
-       "       [  1.61115754e-01,   9.48686153e-02],\n",
-       "       [  3.90950134e-02,   1.87901463e-02],\n",
-       "       [  4.53369339e-02,   4.41653359e-02],\n",
-       "       [  3.16804038e-02,  -1.65526669e-02],\n",
-       "       [ -1.31674251e-02,   2.15248570e-02],\n",
-       "       [  6.75499451e-02,   6.66632097e-04],\n",
-       "       [ -2.69708538e-02,  -6.78904265e-02],\n",
-       "       [ -3.71681160e-02,  -2.22512767e-03],\n",
-       "       [ -5.71108086e-03,   1.34333806e-01],\n",
-       "       [ -4.98302396e-02,  -2.69301593e-02],\n",
-       "       [  9.27076626e-02,  -6.74659621e-02],\n",
-       "       [ -5.58686448e-02,  -7.74435440e-03],\n",
-       "       [  6.90141569e-02,   1.41936899e-02],\n",
-       "       [  4.74163375e-01,  -1.60633543e-02],\n",
-       "       [ -5.34482880e-02,   1.89641502e-02],\n",
-       "       [ -1.95406767e-02,  -3.07353971e-02],\n",
-       "       [  2.60908551e-02,   6.50676460e-02],\n",
-       "       [ -3.44352399e-02,   3.30949342e-02],\n",
-       "       [ -3.06910056e-02,   1.13362149e-02],\n",
-       "       [ -7.65262744e-02,   1.32092499e-01],\n",
-       "       [ -8.52782602e-03,   7.18656744e-02],\n",
-       "       [ -1.85615079e-02,   2.51757447e-01],\n",
-       "       [  1.42538034e-01,   1.49240391e-02],\n",
-       "       [  4.30153119e-01,  -2.75606525e-02],\n",
-       "       [  4.71487250e-02,   3.40239253e-02],\n",
-       "       [  1.08139438e-02,  -7.27233961e-02],\n",
-       "       [  3.26965288e-01,  -2.77789308e-02],\n",
-       "       [ -1.07328472e-01,  -3.12339385e-02],\n",
-       "       [  1.79551806e-02,   2.46285357e-02],\n",
-       "       [  1.53495086e-02,  -7.62952465e-02],\n",
-       "       [  5.90442570e-02,  -1.20995682e-02],\n",
-       "       [ -5.37361069e-02,   2.43237871e-02],\n",
-       "       [ -2.12210689e-03,   9.40000793e-03],\n",
-       "       [ -2.92350849e-02,  -7.68331532e-03],\n",
-       "       [  3.74581258e-02,   2.47156464e-02],\n",
-       "       [  3.64717249e-02,  -4.89426498e-02],\n",
-       "       [ -3.18694179e-01,  -2.77516663e-04],\n",
-       "       [  5.52294262e-02,   5.79268596e-02],\n",
-       "       [  6.98117594e-01,   6.61015005e-03],\n",
-       "       [ -1.28788432e-01,   3.94982206e-01],\n",
-       "       [ -7.47018551e-02,   6.68838468e-02],\n",
-       "       [  1.30884402e-02,   6.67168825e-02],\n",
-       "       [  2.22757447e-02,  -7.36213707e-04],\n",
-       "       [  1.30246011e-01,  -2.82788025e-02],\n",
-       "       [  1.66181626e-02,   2.80493561e-02],\n",
-       "       [ -1.74332414e-02,   9.58964109e-04],\n",
-       "       [ -9.85694324e-03,   8.55505086e-02],\n",
-       "       [ -8.28198032e-02,   1.73312844e-01],\n",
-       "       [  9.74910864e-02,  -1.20318787e-01],\n",
-       "       [  9.96912867e-02,  -1.84800862e-02],\n",
-       "       [  8.65100462e-01,  -1.44790897e-03],\n",
-       "       [ -8.97741176e-04,  -1.09809422e-02],\n",
-       "       [ -3.24733219e-02,  -3.10991207e-02],\n",
-       "       [ -6.73699427e-02,   2.34973710e-01],\n",
-       "       [ -5.54682477e-02,   5.98709425e-03],\n",
-       "       [ -3.82038339e-02,   1.13622746e-02],\n",
-       "       [  1.18870249e-01,  -4.25940813e-02]])"
+       "[[1], [1]]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weights1"
+    "[[dm.cartesian([[1, 2, 4], [1, 2, 4]])[i][0]], [dm.cartesian([[1, 2, 4], [1, 2, 4]])[i][1]]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1], [1]]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "c_arr = dm.cartesian([[1, 2, 4], [1, 2, 4]])\n",
+    "for i in len(c_arr)"
    ]
   },
   {
