more random networks

--- a/Code/Demixing/Random Networks.ipynb
+++ b/Code/Demixing/Random Networks.ipynb
@@ -499,7 +499,6 @@
     }
    ],
    "source": [
-    "\n",
     "ax.hist(lin_corrs_hus_all[0:200] - lin_corrs_ins_all[0:200], 10, facecolor='k', alpha=0.75)\n",
     "ax.set_ylabel('# sims', fontsize=30)\n",
     "ax.set_xlabel('Difference in correlation', fontsize=30)\n",
@@ -537,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -558,13 +557,13 @@
     "    means_b[i] = np.mean(b)\n",
     "    vars_b[i] = np.var(b)\n",
     "    rand_nns_large[i] = {}\n",
-    "    rand_nns_large[i]['W'] = vars_W[i] * np.random.randn(61, 1000) + means_W[i]\n",
-    "    rand_nns_large[i]['b'] = vars_b[i] * np.random.randn(1000) + means_b[i]"
+    "    rand_nns_large[i]['W'] = vars_W[i] * np.random.randn(61, 10) + means_W[i]\n",
+    "    rand_nns_large[i]['b'] = vars_b[i] * np.random.randn(10) + means_b[i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -574,12 +573,60 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n"
      ]
     }
    ],
    "source": [
-    "lin_corrs_ins, lin_corrs_hus, lin_corrs_ins_opt, lin_corrs_hus_opt, kurt_corrs, sum_corrs, lin_corrs_ins_all, lin_corrs_hus_all, kurt_corrs_all, sum_corrs_all = dm.get_corrs(rand_nns_large, testsets, posts_v1, posts_v2, rand_nn=True)"
+    "lin_corrs_ins, lin_corrs_hus, lin_corrs_ins_opt, lin_corrs_hus_opt, kurt_corrs, sum_corrs, lin_corrs_ins_all, lin_corrs_hus_all, kurt_corrs_all, sum_corrs_all = dm.get_corrs2(rand_nns_large, testsets, posts_v1, posts_v2, rand_nn=True)"
    ]
   },
   {
